--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
 title: norisio.dev's homepage
 description: this is the Kldr repository page
-google_analytics: G-5P995BZWCC
+google_analytics: UA-219725506-1
 plugins:
   - jekyll-sitemap
